kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-java-demo
  labels:
    name: openshift-java-demo
