kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshift-java-demo-service
  namespace: openshift-java-demo
  labels:
    app: openshift-java-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: openshift-java-demo
